--- a/pandoc/bibliography.bib
+++ b/pandoc/bibliography.bib
@@ -1,123 +1,260 @@
-@InBook{delegate-verify-public-verifiable-computing-2012,
-author="Parno, Bryan
-and Raykova, Mariana
-and Vaikuntanathan, Vinod",
-editor="Cramer, Ronald",
-title="How to Delegate and Verify in Public: Verifiable Computation from Attribute-Based Encryption",
-bookTitle="Theory of Cryptography: 9th Theory of Cryptography Conference, TCC 2012, Taormina, Sicily, Italy, March 19-21, 2012. Proceedings",
-year="2012",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="422--439",
-abstract="The wide variety of small, computationally weak devices, and the growing number of computationally intensive tasks makes it appealing to delegate computation to data centers. However, outsourcing computation is useful only when the returned result can be trusted, which makes verifiable computation (VC) a must for such scenarios.",
-isbn="978-3-642-28914-9",
-doi="10.1007/978-3-642-28914-9_24",
-url="https://doi.org/10.1007/978-3-642-28914-9_24"
-},
+@inbook{delegate-verify-public-verifiable-computing-2012,
+  author="Parno, Bryan
+    and Raykova, Mariana
+    and Vaikuntanathan, Vinod",
+  editor="Cramer, Ronald",
+  title="How to Delegate and Verify in Public: Verifiable Computation from Attribute-Based Encryption",
+  bookTitle="Theory of Cryptography: 9th Theory of Cryptography Conference, TCC 2012, Taormina, Sicily, Italy, March 19-21, 2012. Proceedings",
+  year="2012",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="422--439",
+  abstract="The wide variety of small, computationally weak devices, and the growing number of computationally intensive tasks makes it appealing to delegate computation to data centers. However, outsourcing computation is useful only when the returned result can be trusted, which makes verifiable computation (VC) a must for such scenarios.",
+  isbn="978-3-642-28914-9",
+  doi="10.1007/978-3-642-28914-9_24",
+  url="https://doi.org/10.1007/978-3-642-28914-9_24"
+}
 
-@INPROCEEDINGS{embracing-peer-next-door-kademlia-2008,
-author={S. Kaune and T. Lauinger and A. Kovacevic and K. Pussep},
-booktitle={2008 Eighth International Conference on Peer-to-Peer Computing},
-title={Embracing the Peer Next Door: Proximity in Kademlia},
-year={2008},
-pages={343-350},
-abstract={At present, the probability of selecting "the peer next door" as an overlay neighbour in Kademlia is fairly small. Prior research has been concerned with reducing the lookup latency by means of proximity neighbour and route selection, but focused on recursive routing algorithms. This work leverages location data about peers and extends Kademlia's iterative routing algorithm to reduce cross-network traffic at the level of the distributed hash table. Evaluation with real-world measurement data gives evidence that locality of traffic tends to reduce lookup latencies as well. In turn, mechanisms that aim at reducing lookup latencies do not necessarily reduce cross-network traffic to the same extent.},
-keywords={peer-to-peer computing;telecommunication network routing;Kademlia;distributed hash table;iterative routing algorithm;lookup latency;peer next door;proximity neighbour;recursive routing;route selection;Clustering algorithms;Costs;Delay;Iterative algorithms;Multimedia communication;Peer to peer computing;Routing;Telecommunication traffic;Traffic control;Web and internet services},
-doi={10.1109/P2P.2008.36},
-ISSN={2161-3559},
-month={Sept}
-},
+@inproceedings{embracing-peer-next-door-kademlia-2008,
+  author={S. Kaune and T. Lauinger and A. Kovacevic and K. Pussep},
+  booktitle={2008 Eighth International Conference on Peer-to-Peer Computing},
+  title={Embracing the Peer Next Door: Proximity in Kademlia},
+  year={2008},
+  pages={343-350},
+  abstract={At present, the probability of selecting "the peer next door" as an overlay neighbour in Kademlia is fairly small. Prior research has been concerned with reducing the lookup latency by means of proximity neighbour and route selection, but focused on recursive routing algorithms. This work leverages location data about peers and extends Kademlia's iterative routing algorithm to reduce cross-network traffic at the level of the distributed hash table. Evaluation with real-world measurement data gives evidence that locality of traffic tends to reduce lookup latencies as well. In turn, mechanisms that aim at reducing lookup latencies do not necessarily reduce cross-network traffic to the same extent.},
+  keywords={peer-to-peer computing;telecommunication network routing;Kademlia;distributed hash table;iterative routing algorithm;lookup latency;peer next door;proximity neighbour;recursive routing;route selection;Clustering algorithms;Costs;Delay;Iterative algorithms;Multimedia communication;Peer to peer computing;Routing;Telecommunication traffic;Traffic control;Web and internet services},
+  doi={10.1109/P2P.2008.36},
+  ISSN={2161-3559},
+  month={Sept}
+}
 
 @misc{ethereum-yellowpaper-2014,
   author = {Gavin Wood},
   title = {Ethereum: A secure decentralised generalised transaction ledger},
   journal = {Ethereum Project Yellow Paper},
   year = {2014},
-  howpublished = {\url{http://bitcoinaffiliatelist.com/wp-content/uploads/ethereum.pdf}},
-  note = {Accessed: 2017-09-12},
-  url = {http://bitcoinaffiliatelist.com/wp-content/uploads/ethereum.pdf},
-},
+  howpublished = {\url{https://github.com/ethereum/yellowpaper}},
+  note = {Accessed: 2017-08-07},
+}
 
 @misc{golem-whitepaper-2016,
-title="",
-author="",
-year="20"
-},
+  author = {Golem},
+  title = {The Golem Project - Crowdfunding Whitepaper},
+  year = {2016},
+  month={October},
+  howpublished = {\url{http://www.golemproject.net/doc/DraftGolemProjectWhitepaper.pdf}},
+  note = {Accessed: 2017-09-12},
+}
 
-@misc{handling-churn-dht-2004,
-title="",
-author="",
-year="20"
-},
+@inproceedings{handling-churn-dht-2004,
+  author = {Sean C. Rhea and
+    Dennis Geels and
+      Timothy Roscoe and
+      John Kubiatowicz},
+  title = {Handling Churn in a {DHT}},
+  booktitle = {Proceedings of the General Track: 2004 {USENIX} Annual Technical Conference,
+    June 27 - July 2, 2004, Boston Marriott Copley Place, Boston, MA,
+    {USA}},
+  pages = {127--140},
+  year = {2004},
+  crossref = {DBLP:conf/usenix/2004g},
+  url = {http://www.usenix.org/publications/library/proceedings/usenix04/tech/general/rhea.html},
+  biburl = {http://dblp.org/rec/bib/conf/usenix/RheaGRK04},
+} ,
 
-@misc{improving-lookup-kademlia-2010,
-title="",
-author="",
-year="20"
-},
+  @INPROCEEDINGS{improving-lookup-kademlia-2010,
+    author={C. Wang and N. Yang and H. Chen},
+    booktitle={2010 Second International Conference on Networks Security, Wireless Communications and Trusted Computing},
+    title={Improving Lookup Performance Based on Kademlia},
+    year={2010},
+    volume={1},
+    pages={446-449},
+    abstract={According to the P2P network based on Distributed Hash Table (DHT), Flooding will be combined with the DHT system, the physical proximity of nodes in the network will be used to reduce the latency and optimize routing before the formation of the logical topology. An improved EKademlia based on original model is constructed, EKademlia inherits the advantages of DHT and Kademlia, and it is superior to the original Kademlia model in the routing choices, the rate of successfully finding, the average logical path length and other aspects.},
+    keywords={peer-to-peer computing;table lookup;DHT system;Kademlia;P2P network;distributed hash table;flooding;logical topology;Application software;Collaborative work;Computer science;Computer security;Dictionaries;Network servers;Network topology;Peer to peer computing;Routing;Wireless communication;Distributed Hash table (DHT);Flooding;Kademlia;P2P network;Resource location},
+    doi={10.1109/NSWCTC.2010.111},
+    month={April}
+  }
 
-@misc{ipfs-2014,
-title="",
-author="",
-year="20"
-},
+@article{ipfs-2014,
+  author = {Juan Benet},
+  title = {{IPFS} - Content Addressed, Versioned, {P2P} File System},
+  journal = {CoRR},
+  volume = {abs/1407.3561},
+  year = {2014},
+  url = {http://arxiv.org/abs/1407.3561},
+  biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/Benet14},
+}
 
 @misc{kademlia-2002,
-title="",
-author="",
-year="20"
-},
+  author = {Petar Maymounkov and
+    David Mazi{\`{e}}res},
+  title = {Kademlia: {A} Peer-to-Peer Information System Based on the {XOR} Metric},
+  booktitle = {Peer-to-Peer Systems, First International Workshop, {IPTPS} 2002,
+    Cambridge, MA, USA, March 7-8, 2002, Revised Papers},
+  pages = {53--65},
+  year = {2002},
+  crossref = {DBLP:conf/iptps/2002},
+  url = {https://doi.org/10.1007/3-540-45748-8_5},
+  doi = {10.1007/3-540-45748-8_5},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/iptps/MaymounkovM02},
+}
 
-@misc{noninteractive-verifiable-computing-2010,
-title="",
-author="",
-year="20"
-},
+@inbook{noninteractive-verifiable-computing-2010,
+  author="Gennaro, Rosario
+    and Gentry, Craig
+    and Parno, Bryan",
+  editor="Rabin, Tal",
+  title="Non-interactive Verifiable Computing: Outsourcing Computation to Untrusted Workers",
+  bookTitle="Advances in Cryptology -- CRYPTO 2010: 30th Annual Cryptology Conference, Santa Barbara, CA, USA, August 15-19, 2010. Proceedings",
+  year="2010",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="465--482",
+  isbn="978-3-642-14623-7",
+  doi="10.1007/978-3-642-14623-7_25",
+  url="https://doi.org/10.1007/978-3-642-14623-7_25"
+}
 
-@misc{performance-chord-kademlia-churn-2014,
-title="",
-author="",
-year="20"
-},
+@article{performance-chord-kademlia-churn-2015,
+  author = {Adán G. Medrano-Chávez and Elizabeth Pérez-Cortés and Miguel Lopez-Guerrero},
+  title = {A performance comparison of Chord and Kademlia DHTs in high churn scenarios},
+  journal = {Peer-to-Peer Networking and Applications},
+  volume = {8},
+  number = {5},
+  pages = {807--821},
+  year = {2015},
+  url = {https://doi.org/10.1007/s12083-014-0294-y},
+  doi = {10.1007/s12083-014-0294-y},
+  biburl = {http://dblp.uni-trier.de/rec/bib/journals/ppna/Medrano-ChavezC15},
+}
 
-@misc{performance-evaluation-kademlia-2010,
-title="",
-author="",
-year="20"
-},
+@article{performance-evaluation-kademlia-2010,
+  author = {Zhonghong Ou and
+    Erkki Harjula and
+      Otso Kassinen and
+      Mika Ylianttila},
+  title = {Performance evaluation of a Kademlia-based communication-oriented
+    {P2P} system under churn},
+  journal = {Computer Networks},
+  volume = {54},
+  number = {5},
+  pages = {689--705},
+  year = {2010},
+  url = {https://doi.org/10.1016/j.comnet.2009.09.022},
+  doi = {10.1016/j.comnet.2009.09.022},
+  timestamp = {Thu, 18 May 2017 09:50:57 +0200},
+  biburl = {http://dblp.uni-trier.de/rec/bib/journals/cn/OuHKY10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
-@misc{pinoccchio-nearly-practical-verifiable-computing-2013,
-title="",
-author="",
-year="20"
-},
+@inproceedings{pinocchio-nearly-practical-verifiable-computing-2013,
+  author = {Bryan Parno and
+    Jon Howell and
+      Craig Gentry and
+      Mariana Raykova},
+  title = {Pinocchio: Nearly Practical Verifiable Computation},
+  booktitle = {2013 {IEEE} Symposium on Security and Privacy, {SP} 2013, Berkeley,
+    CA, USA, May 19-22, 2013},
+  pages = {238--252},
+  year = {2013},
+  crossref = {DBLP:conf/sp/2013},
+  url = {https://doi.org/10.1109/SP.2013.47},
+  doi = {10.1109/SP.2013.47},
+  timestamp = {Fri, 26 May 2017 00:50:06 +0200},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/sp/ParnoHG013},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
-@misc{s-kademlia-2007,
-title="",
-author="",
-year="20"
-},
+@inproceedings{s-kademlia-2007,
+  author = {Ingmar Baumgart and
+    Sebastian Mies},
+  title = {S/Kademlia: {A} practicable approach towards secure key-based routing},
+  booktitle = {13th International Conference on Parallel and Distributed Systems,
+    {ICPADS} 2007, Hsinchu, Taiwan, December 5-7, 2007},
+  pages = {1--8},
+  year = {2007},
+  url = {https://doi.org/10.1109/ICPADS.2007.4447808},
+  doi = {10.1109/ICPADS.2007.4447808},
+  timestamp = {Fri, 26 May 2017 00:49:11 +0200},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/icpads/BaumgartM07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
-@misc{subsecond-lookup-kademlia-2011,
-title="",
-author="",
-year="20"
-},
+@inproceedings{subsecond-lookup-kademlia-2011,
+  author = {Ra{\'{u}}l Jim{\'{e}}nez and
+    Flutra Osmani and
+      Bj{\"{o}}rn Knutsson},
+  title = {Sub-second lookups on a large-scale Kademlia-based overlay},
+  booktitle = {2011 {IEEE} International Conference on Peer-to-Peer Computing, {P2P}
+    2011, Kyoto, Japan, August 31 - September 2, 2011},
+  pages = {82--91},
+  year = {2011},
+  url = {https://doi.org/10.1109/P2P.2011.6038665},
+  doi = {10.1109/P2P.2011.6038665},
+  timestamp = {Tue, 23 May 2017 01:06:52 +0200},
+  biburl = {http://dblp.uni-trier.de/rec/bib/conf/p2p/JimenezOK11},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
-@misc{survey-simulators-overlay-networks-2017,
-title="",
-author="",
-year="20"
-},
+@article{survey-simulators-overlay-networks-2017,
+  title = "A survey of simulators for P2P overlay networks with a case study of the P2P tree overlay using an event-driven simulator",
+  journal = "Engineering Science and Technology, an International Journal",
+  volume = "20",
+  number = "2",
+  pages = "705 - 720",
+  year = "2017",
+  note = "",
+  issn = "2215-0986",
+  doi = "http://dx.doi.org/10.1016/j.jestch.2016.12.010",
+  url = "http://www.sciencedirect.com/science/article/pii/S2215098616306012",
+  author = "Shivangi Surati and Devesh C. Jinwala and Sanjay Garg",
+  keywords = "Distributed computing",
+  keywords = "Peer-to-Peer systems",
+  keywords = "Overlay networks",
+  keywords = "Peer-to-Peer simulators",
+  keywords = "Network simulation",
+  abstract = "Implementation of a P2P (Peer-to-Peer) overlay network directly on the realistic network environments is not a feasible initiative as scalability is a major challenge for P2P. The implementation of newly created P2P networks must be analyzed, well tested and evaluated through experiments by researchers and organizations. Various simulators have been developed to analyze and simulate P2P protocols before applying to real applications. However, selection of an appropriate simulator suitable for a given application requires a prior comprehensive survey of P2P simulators. The existing literature survey of P2P simulators has limitations viz. (i) all P2P related simulators have not been included, (ii) all design criteria for comparison and appropriate selection of the simulator may not be considered, (iii) appropriate practical application through the simulation has not been presented to enhance the outcome of a survey. To overcome these limitations, we survey existing simulators with classifications, additional design parameters, limitations and comparison using various criteria. In addition, we discuss about common interface concept that creates a generic application to make the implementation of targeted application portable. Not only that, we present a case study of implementation of BATON (BAlanced Tree Overlay Network) and BATON* using an event-driven model of PeerSim simulator that helps the developers to simulate the tree overlays efficiently."
+}
 
-@misc{trustless-computing-what-not-how-2016,
-title="",
-author="",
-year="20"
-},
+@inbook{trustless-computing-what-not-how-2016,
+  author="Wood, Gavin
+    and Steiner, Jutta",
+  editor="Tasca, Paolo
+    and Aste, Tomaso
+    and Pelizzon, Loriana
+    and Perony, Nicolas",
+  title="Trustless Computing---The What Not the How",
+  bookTitle="Banking Beyond Banks and Money: A Guide to Banking Services in the Twenty-First Century",
+  year="2016",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="133--144",
+  abstract="A recent development has provided us with a new computing paradigm: the blockchain. First described by Satoshi in 2008, it is the first example of a computer that has the functionality to remember and enforce past statements by participants, in a non-localized, resilient and auditable manner. Although the Internet has allowed us to create a global infrastructure for cheap and flexible communication, no strong statements can follow from its weak economic signals without resorting to a recognised authority. A global information system that has the properties of the Internet but also the functionality to enforce statements without a trusted intermediary is required: such a system is called trustless. The chapter follows the examples of the usage of blockchain technology as a system that provides guarantees over the rules of its operations in consumer goods, online dating and international trade, with no need of third party intervention for the creation of trust, unleashing new potential business opportunities.",
+  isbn="978-3-319-42448-4",
+  doi="10.1007/978-3-319-42448-4_8",
+  url="https://doi.org/10.1007/978-3-319-42448-4_8"
+}
 
-@misc{webassembly-2017,
-title="Bringing the Web up to Speed with WebAssembly",
-author="Andreas Haas Andreas Rossberg Derek L. Schuff ∗ Ben L. Titzer Michael Holman Dan Gohman Luke Wagner Alon Zakai JF Bastien",
-year="2017"
+@inproceedings{webassembly-2017,
+  author = {Andreas Haas and
+    Andreas Rossberg and
+      Derek L. Schuff and
+      Ben L. Titzer and
+      Michael Holman and
+      Dan Gohman and
+      Luke Wagner and
+      Alon Zakai and
+      J. F. Bastien},
+  title = {Bringing the web up to speed with WebAssembly},
+  booktitle = {Proceedings of the 38th {ACM} {SIGPLAN} Conference on Programming
+    Language Design and Implementation, {PLDI} 2017, Barcelona, Spain,
+    June 18-23, 2017},
+  pages = {185--200},
+  year = {2017},
+  crossref = {DBLP:conf/pldi/2017},
+  url = {http://doi.acm.org/10.1145/3062341.3062363},
+  doi = {10.1145/3062341.3062363},
+  timestamp = {Mon, 19 Jun 2017 08:37:26 +0200},
+  biburl = {http://dblp.org/rec/bib/conf/pldi/HaasRSTHGWZB17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
