roadmap notes + add conference + add literature

--- a/pandoc/bibliography.bib
+++ b/pandoc/bibliography.bib
@@ -258,3 +258,15 @@
   biburl = {http://dblp.org/rec/bib/conf/pldi/HaasRSTHGWZB17},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@phdthesis{stefan-phd-2008,
+  author    = {Stefan Schmid},
+  title     = {Dynamics and cooperation: algorithmic challenges in peer to peer computing},
+  school    = {{ETH} Zurich},
+  year      = {2008},
+  url       = {https://www.net.t-labs.tu-berlin.de/~stefan/PhDStefan.pdf},
+  isbn      = {978-3-86628-205-6},
+  timestamp = {Wed, 04 May 2016 16:03:43 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/phd/ch/Schmid2008},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
