--- a/pandoc/bibliography.bib
+++ b/pandoc/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{computes-io-2017,
+  author = {Chris Matthieu},
+  title = {Distributed Computing: Centralized vs Decentralized; How does computes.io work?}, 
+  year = {2017},
+  month={April},
+  howpublished = {\url{https://blog.computes.io/distributed-computed-centralized-vs-decentralized-c1d21202bde8}},
+}
 @inbook{delegate-verify-public-verifiable-computing-2012,
   author="Parno, Bryan
     and Raykova, Mariana
@@ -46,6 +53,7 @@
   note = {Accessed: 2017-09-12},
 }
 
+
 @inproceedings{handling-churn-dht-2004,
   author = {Sean C. Rhea and
     Dennis Geels and
@@ -60,20 +68,28 @@
   crossref = {DBLP:conf/usenix/2004g},
   url = {http://www.usenix.org/publications/library/proceedings/usenix04/tech/general/rhea.html},
   biburl = {http://dblp.org/rec/bib/conf/usenix/RheaGRK04},
-} ,
+}
 
-  @INPROCEEDINGS{improving-lookup-kademlia-2010,
-    author={C. Wang and N. Yang and H. Chen},
-    booktitle={2010 Second International Conference on Networks Security, Wireless Communications and Trusted Computing},
-    title={Improving Lookup Performance Based on Kademlia},
-    year={2010},
-    volume={1},
-    pages={446-449},
-    abstract={According to the P2P network based on Distributed Hash Table (DHT), Flooding will be combined with the DHT system, the physical proximity of nodes in the network will be used to reduce the latency and optimize routing before the formation of the logical topology. An improved EKademlia based on original model is constructed, EKademlia inherits the advantages of DHT and Kademlia, and it is superior to the original Kademlia model in the routing choices, the rate of successfully finding, the average logical path length and other aspects.},
-    keywords={peer-to-peer computing;table lookup;DHT system;Kademlia;P2P network;distributed hash table;flooding;logical topology;Application software;Collaborative work;Computer science;Computer security;Dictionaries;Network servers;Network topology;Peer to peer computing;Routing;Wireless communication;Distributed Hash table (DHT);Flooding;Kademlia;P2P network;Resource location},
-    doi={10.1109/NSWCTC.2010.111},
-    month={April}
-  }
+@misc{iex-ec-2017,
+  author = {{The iEx.ec Project}},
+  title = {iEx.ec White Paper}, 
+  year = {2017},
+  month={March},
+  howpublished = {http://iex.ec/wp-content/uploads/2017/04/iExec-WPv2.0-English.pdf},
+}
+
+@INPROCEEDINGS{improving-lookup-kademlia-2010,
+  author={C. Wang and N. Yang and H. Chen},
+  booktitle={2010 Second International Conference on Networks Security, Wireless Communications and Trusted Computing},
+  title={Improving Lookup Performance Based on Kademlia},
+  year={2010},
+  volume={1},
+  pages={446-449},
+  abstract={According to the P2P network based on Distributed Hash Table (DHT), Flooding will be combined with the DHT system, the physical proximity of nodes in the network will be used to reduce the latency and optimize routing before the formation of the logical topology. An improved EKademlia based on original model is constructed, EKademlia inherits the advantages of DHT and Kademlia, and it is superior to the original Kademlia model in the routing choices, the rate of successfully finding, the average logical path length and other aspects.},
+  keywords={peer-to-peer computing;table lookup;DHT system;Kademlia;P2P network;distributed hash table;flooding;logical topology;Application software;Collaborative work;Computer science;Computer security;Dictionaries;Network servers;Network topology;Peer to peer computing;Routing;Wireless communication;Distributed Hash table (DHT);Flooding;Kademlia;P2P network;Resource location},
+  doi={10.1109/NSWCTC.2010.111},
+  month={April}
+}
 
 @article{ipfs-2014,
   author = {Juan Benet},
@@ -214,6 +230,14 @@
   keywords = "Peer-to-Peer simulators",
   keywords = "Network simulation",
   abstract = "Implementation of a P2P (Peer-to-Peer) overlay network directly on the realistic network environments is not a feasible initiative as scalability is a major challenge for P2P. The implementation of newly created P2P networks must be analyzed, well tested and evaluated through experiments by researchers and organizations. Various simulators have been developed to analyze and simulate P2P protocols before applying to real applications. However, selection of an appropriate simulator suitable for a given application requires a prior comprehensive survey of P2P simulators. The existing literature survey of P2P simulators has limitations viz. (i) all P2P related simulators have not been included, (ii) all design criteria for comparison and appropriate selection of the simulator may not be considered, (iii) appropriate practical application through the simulation has not been presented to enhance the outcome of a survey. To overcome these limitations, we survey existing simulators with classifications, additional design parameters, limitations and comparison using various criteria. In addition, we discuss about common interface concept that creates a generic application to make the implementation of targeted application portable. Not only that, we present a case study of implementation of BATON (BAlanced Tree Overlay Network) and BATON* using an event-driven model of PeerSim simulator that helps the developers to simulate the tree overlays efficiently."
+}
+
+@misc{truebit-2017,
+  author = {Jason Teutsch and Christian Reitwießner},
+  title = {A scalable verification solution for blockchains},
+  year = {2017},
+  month={March},
+  howpublished = {\url{https://people.cs.uchicago.edu/~teutsch/papers/truebit.pdf}},
 }
 
 @inbook{trustless-computing-what-not-how-2016,
